@@ -4,6 +4,73 @@ README.md
 run.py
 setup.cfg
 setup.py
+.eggs/README.txt
+.eggs/pbr-6.0.0-py3.11.egg/EGG-INFO/AUTHORS
+.eggs/pbr-6.0.0-py3.11.egg/EGG-INFO/LICENSE
+.eggs/pbr-6.0.0-py3.11.egg/EGG-INFO/PKG-INFO
+.eggs/pbr-6.0.0-py3.11.egg/EGG-INFO/RECORD
+.eggs/pbr-6.0.0-py3.11.egg/EGG-INFO/WHEEL
+.eggs/pbr-6.0.0-py3.11.egg/EGG-INFO/entry_points.txt
+.eggs/pbr-6.0.0-py3.11.egg/EGG-INFO/top_level.txt
+.eggs/pbr-6.0.0-py3.11.egg/pbr/__init__.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/build.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/core.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/extra_files.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/find_package.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/git.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/options.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/packaging.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/pbr_json.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/sphinxext.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/testr_command.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/util.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/version.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/cmd/__init__.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/cmd/main.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/hooks/__init__.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/hooks/backwards.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/hooks/base.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/hooks/commands.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/hooks/files.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/hooks/metadata.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/__init__.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/base.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/test_commands.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/test_core.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/test_files.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/test_hooks.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/test_integration.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/test_packaging.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/test_pbr_json.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/test_setup.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/test_util.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/test_version.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/test_wsgi.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/util.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/CHANGES.txt
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/LICENSE.txt
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/MANIFEST.in
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/README.txt
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/extra-file.txt
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/git-extra-file.txt
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/setup.cfg
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/setup.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/test-requirements.txt
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/data_files/a.txt
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/data_files/b.txt
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/data_files/c.rst
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/doc/source/conf.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/doc/source/index.rst
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/doc/source/installation.rst
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/doc/source/usage.rst
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/pbr_testpackage/__init__.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/pbr_testpackage/_setup_hooks.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/pbr_testpackage/cmd.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/pbr_testpackage/extra.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/pbr_testpackage/wsgi.py
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/pbr_testpackage/package_data/1.txt
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/pbr_testpackage/package_data/2.txt
+.eggs/pbr-6.0.0-py3.11.egg/pbr/tests/testpackage/src/testext.c
 shop2/domain.py
 shop2/planner.py
 shop2/utils.py
