@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Modified Planner
+* create package
 * check
 * Fixed Axioms
 * Fixed Axioms
